twitter-clone-backend/infra/twitter-store-backend-cloudformation.yml
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: MIT

AWSTemplateFormatVersion: '2010-09-09'

Description: Twitter clone, AWS Fargate cluster hosting APIs exposed through API Gateway.

Parameters:
  EnvironmentName:
    Type: String
    Default: twitter-clone-demo
    Description: "A friendly environment name that will be used for namespacing all cluster resources."
  PrivateDNSNamespaceName:
    Type: String
    Default: service
    Description: "The private DNS name that identifies the name that you want to use to locate your resources"
  HealthCheckPath:
    Type: String
    Default: /actuator/health
    Description: Path to perform the healthcheck on each instance.
  HealthCheckIntervalSeconds:
    Type: Number
    Default: 5
    Description: Number of seconds to wait between each health check.
  ServiceName:
    Type: String
    Default: twitter-clone-backend
    Description: A human-readable name for the service.
  ImageUrl:
    Type: String
    Default: 410541938014.dkr.ecr.eu-west-2.amazonaws.com/twitter-clone-backend:0.0.1
    Description: The url of a docker image that will handle incoming traffic.
  ContainerCpu:
    Type: Number
    Default: 512
    Description: How much CPU to give the container. 1024 is 1 CPU.
  ContainerMemory:
    Type: Number
    Default: 1024
    Description: How much memory in megabytes to give the container.
  MinContainersTweetStore:
    Type: Number
    Default: 1
    Description: "Minimum number of ECS tasks per ECS service"
  MaxContainersTweetStore:
    Type: Number
    Default: 2
    Description: "Maximum number of ECS tasks per ECS service"
  AutoScalingTargetValueTweetStore:
    Type: Number
    Default: 50
    Description: "Target CPU utilizatio (%) for ECS services auto scaling"
  DBInstanceClass:
    Type: String
    Description: The ID of the second subnet to place the RDS instance into.
    Default: 'db.t2.micro' # free tier
  DBName:
    Type: String
    Default: twitterstoredb
    Description: The name of the database that is created within the PostgreSQL instance.
  DBUsername:
    Type: String
    Default: twitterstoredbuser
    Description: The master user name for the PostgreSQL instance.

Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - 
        Label: 
          default: "Generic"
        Parameters: 
          - EnvironmentName
          - PrivateDNSNamespaceName
      - 
        Label: 
          default: "TweetStore Service"
        Parameters: 
          - MinContainersTweetStore
          - MaxContainersTweetStore
          - AutoScalingTargetValueTweetStore

Mappings:
  SubnetConfig:
    VPC:
      CIDR: '10.0.0.0/16'
    PublicOne:
      CIDR: '10.0.0.0/24'
    PublicTwo:
      CIDR: '10.0.1.0/24'
    PublicThree:
      CIDR: '10.0.2.0/24'
    PrivateOne:
      CIDR: '10.0.100.0/24'
    PrivateTwo:
      CIDR: '10.0.101.0/24'
    PrivateThree:
      CIDR: '10.0.102.0/24'
    PrivateFour:
      CIDR: '10.0.200.0/24'
    PrivateFive:
      CIDR: '10.0.201.0/24'
    PrivateSix:
      CIDR: '10.0.202.0/24'

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']

  PublicSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']
      MapPublicIpOnLaunch: true
  PublicSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicTwo', 'CIDR']
      MapPublicIpOnLaunch: true
  PublicSubnetThree:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicThree', 'CIDR']
      MapPublicIpOnLaunch: true

  PrivateSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateOne', 'CIDR']
  PrivateSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateTwo', 'CIDR']
  PrivateSubnetThree:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateThree', 'CIDR']

  PrivateSubnetFour:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateFour', 'CIDR']
  PrivateSubnetFive:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateFive', 'CIDR']
  PrivateSubnetSix:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateSix', 'CIDR']

  InternetGateway:
    Type: AWS::EC2::InternetGateway
  GatewayAttachement:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'InternetGateway'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayAttachement
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
  PublicSubnetOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetOne
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetTwo
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetThreeRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetThree
      RouteTableId: !Ref PublicRouteTable

  NatGatewayOneAttachment:
    Type: AWS::EC2::EIP
    DependsOn: GatewayAttachement
    Properties:
        Domain: vpc
  NatGatewayTwoAttachment:
    Type: AWS::EC2::EIP
    DependsOn: GatewayAttachement
    Properties:
        Domain: vpc
  NatGatewayThreeAttachment:
    Type: AWS::EC2::EIP
    DependsOn: GatewayAttachement
    Properties:
        Domain: vpc
  NatGatewayOne:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayOneAttachment.AllocationId
      SubnetId: !Ref PublicSubnetOne
  NatGatewayTwo:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayTwoAttachment.AllocationId
      SubnetId: !Ref PublicSubnetTwo
  NatGatewayThree:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayThreeAttachment.AllocationId
      SubnetId: !Ref PublicSubnetThree
  PrivateRouteTableOne:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRouteOne:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableOne
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayOne
  PrivateRouteTableOneAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableOne
      SubnetId: !Ref PrivateSubnetOne
  PrivateRouteTableTwo:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRouteTwo:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableTwo
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayTwo
  PrivateRouteTableTwoAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableTwo
      SubnetId: !Ref PrivateSubnetTwo
  PrivateRouteTableThree:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRouteThree:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableThree
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayThree
  PrivateRouteTableThreeAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableThree
      SubnetId: !Ref PrivateSubnetThree
  
  PrivateRouteTableFour:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRouteFour:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableFour
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayOne
  PrivateRouteTableFourAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableFour
      SubnetId: !Ref PrivateSubnetFour

  PrivateRouteTableFive:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRouteFive:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableFive
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayTwo
  PrivateRouteTableFiveAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableFive
      SubnetId: !Ref PrivateSubnetFive

  PrivateRouteTableSix:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRouteSix:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableSix
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayThree
  PrivateRouteTableSixAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableSix
      SubnetId: !Ref PrivateSubnetSix

  ECSCluster:
    Type: AWS::ECS::Cluster

  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the Fargate containers
      VpcId: !Ref 'VPC'

  ContainerSecurityGroupSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ContainerSecurityGroup
      SourceSecurityGroupId: !Ref ContainerSecurityGroup
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the RDS instance
      VpcId: !Ref 'VPC'

  DBSecurityGroupIngressFromECS:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from the ECS containers to the RDS instance
      GroupId: !Ref 'DBSecurityGroup'
      IpProtocol: -1
      SourceSecurityGroupId: !Ref 'ContainerSecurityGroup'

  Secret:
    Type: "AWS::SecretsManager::Secret"
    Properties:
      Name: !Ref 'DBUsername'
      GenerateSecretString:
        # This will generate a JSON object with the keys "username" and password.
        SecretStringTemplate: !Join ['', ['{"username": "', !Ref 'DBUsername' ,'"}']]
        GenerateStringKey: "password"
        PasswordLength: 32
        ExcludeCharacters: '"@/\'

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for the RDS instance
      DBSubnetGroupName: DBSubnetGroup
      SubnetIds:
        - !Ref PrivateSubnetFour
        - !Ref PrivateSubnetFive

  PostgresInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      DBInstanceClass: !Ref 'DBInstanceClass'
      DBName: !Ref 'DBName'
      DBSubnetGroupName: !Ref 'DBSubnetGroup'
      Engine: postgres
      EngineVersion: 11.5
      MasterUsername: !Ref 'DBUsername'
      MasterUserPassword: !Join ['', ['{{resolve:secretsmanager:', !Ref Secret, ':SecretString:password}}' ]]
      PubliclyAccessible: false
      VPCSecurityGroups:
        - !Ref 'DBSecurityGroup'

  SecretRDSInstanceAttachment:
    Type: "AWS::SecretsManager::SecretTargetAttachment"
    Properties:
      SecretId: !Ref Secret
      TargetId: !Ref PostgresInstance
      TargetType: AWS::RDS::DBInstance

  AutoScalingRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceAutoscaleRole'

  ECSRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: ecs-service
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action:
              - 'ec2:AttachNetworkInterface'
              - 'ec2:CreateNetworkInterface'
              - 'ec2:CreateNetworkInterfacePermission'
              - 'ec2:DeleteNetworkInterface'
              - 'ec2:DeleteNetworkInterfacePermission'
              - 'ec2:Describe*'
              - 'ec2:DetachNetworkInterface'

              - 'elasticloadbalancing:DeregisterInstancesFromLoadBalancer'
              - 'elasticloadbalancing:DeregisterTargets'
              - 'elasticloadbalancing:Describe*'
              - 'elasticloadbalancing:RegisterInstancesWithLoadBalancer'
              - 'elasticloadbalancing:RegisterTargets'
            Resource: '*'

  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs-tasks.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
        - PolicyName: AmazonECSTaskExecutionRolePolicy
          PolicyDocument:
            Statement:
            - Effect: Allow
              Action:
                # Allow the ECS Tasks to download images from ECR
                - 'ecr:GetAuthorizationToken'
                - 'ecr:BatchCheckLayerAvailability'
                - 'ecr:GetDownloadUrlForLayer'
                - 'ecr:BatchGetImage'

                # Allow the ECS tasks to upload logs to CloudWatch
                - 'logs:CreateLogStream'
                - 'logs:PutLogEvents'
              Resource: '*'

  PrivateDNSNamespace:
    Type: 'AWS::ServiceDiscovery::PrivateDnsNamespace'
    Properties:
      Vpc: !Ref VPC
      Name: !Ref PrivateDNSNamespaceName

  ServiceDiscoveryServiceTweetStore:
    Type: 'AWS::ServiceDiscovery::Service'
    Properties:
      DnsConfig:
        DnsRecords:
          - Type: SRV
            TTL: 60
        NamespaceId: !Ref PrivateDNSNamespace
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: 'tweets.tweetstore'

  TaskRoleTweetStore:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      # Policies:
      # - PolicyName: dynamodb-table-access
      #   PolicyDocument:
      #     Statement:
      #     - Effect: Allow
      #       Action:
      #       - dynamodb:BatchGet*
      #       - dynamodb:DescribeStream
      #       - dynamodb:DescribeTable
      #       - dynamodb:Get*
      #       - dynamodb:Query
      #       - dynamodb:Scan
      #       - dynamodb:BatchWrite*
      #       - dynamodb:CreateTable
      #       - dynamodb:Delete*
      #       - dynamodb:Update*
      #       - dynamodb:PutItem
      #       Resource: !GetAtt DynamoDBTableTweetStore.Arn

  TaskDefinitionTweetStore:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      TaskRoleArn: !GetAtt TaskRoleTweetStore.Arn
      RequiresCompatibilities:
        - FARGATE
      ContainerDefinitions:
          - Name: !Ref 'ServiceName'
            Cpu: !Ref 'ContainerCpu'
            Memory: !Ref 'ContainerMemory'
            Image: !Ref 'ImageUrl'
            Essential: true
            PortMappings:
              - ContainerPort: 8080
                Protocol: tcp
            Environment:
              - Name: SPRING_DATASOURCE_URL
                Value: !Join
                  - ''
                  - - 'jdbc:postgresql://'
                    - !GetAtt 'PostgresInstance.Endpoint.Address'
                    - ':'
                    - !GetAtt 'PostgresInstance.Endpoint.Port'
                    - '/'
                    - !Ref DBName
              - Name: SPRING_DATASOURCE_USERNAME
                Value: !Join
                  - ''
                  - - '{{resolve:secretsmanager:'
                    - !Ref 'Secret'
                    - ':SecretString:username}}'
              - Name: SPRING_DATASOURCE_PASSWORD
                Value: !Join
                  - ''
                  - - '{{resolve:secretsmanager:'
                    - !Ref 'Secret'
                    - ':SecretString:password}}'
      NetworkMode: awsvpc
      Cpu: !Ref 'ContainerCpu'
      Memory: !Ref 'ContainerMemory'
      ExecutionRoleArn: !Ref ECSTaskExecutionRole


  ServiceTweetStore: 
    Type: AWS::ECS::Service
    DependsOn:
      - PrivateRouteOne
      - PrivateRouteTwo
      - PrivateRouteThree
    Properties: 
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref TaskDefinitionTweetStore
      LaunchType: FARGATE
      DesiredCount: 3
      ServiceRegistries:
        - RegistryArn: !GetAtt ServiceDiscoveryServiceTweetStore.Arn
          Port: 8080
      NetworkConfiguration:
          AwsvpcConfiguration:
            AssignPublicIp: DISABLED
            Subnets:
              - !Ref PrivateSubnetOne
              - !Ref PrivateSubnetTwo
              - !Ref PrivateSubnetThree
            SecurityGroups:
              - !Ref ContainerSecurityGroup

  AutoScalingTargetTweetStore:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MinCapacity: !Ref MinContainersTweetStore
      MaxCapacity: !Ref MaxContainersTweetStore
      ResourceId: !Join ['/', [service, !Ref ECSCluster, !GetAtt ServiceTweetStore.Name]]
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
      RoleARN: !GetAtt AutoScalingRole.Arn

  AutoScalingPolicyTweetStore:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: !Join ['', [!GetAtt ServiceTweetStore.Name, '-AutoScalingPolicy']]
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref AutoScalingTargetTweetStore
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        TargetValue: !Ref AutoScalingTargetValueTweetStore

  HttpApiVPCLink:
    Type: AWS::ApiGatewayV2::VpcLink
    Properties: 
      Name: !Ref EnvironmentName
      SecurityGroupIds: 
        - !Ref ContainerSecurityGroup
      SubnetIds: 
        - !Ref PrivateSubnetOne
        - !Ref PrivateSubnetTwo
        - !Ref PrivateSubnetThree

  UserPool:
    Type: AWS::Cognito::UserPool
    
    Properties:
      AdminCreateUserConfig:
        AllowAdminCreateUserOnly: true
      Policies:
        PasswordPolicy:
          MinimumLength: 6
          TemporaryPasswordValidityDays: 365
      # UsernameAttributes:
      #   - email
      # AutoVerifiedAttributes:
      #   - email
  
  UserPoolClient:
    Type: "AWS::Cognito::UserPoolClient"
    Properties:
      UserPoolId: !Ref UserPool
      GenerateSecret: false
      SupportedIdentityProviders:
        - COGNITO
      PreventUserExistenceErrors: ENABLED

  HttpApi:
    Type: AWS::ApiGatewayV2::Api
    Properties:
      Body:
        openapi: "3.0.1"
        info:
          title: !Ref EnvironmentName
        components:
          securitySchemes:
            my-authorizer:
              type: oauth2
              flows: {}
              x-amazon-apigateway-authorizer:
                identitySource: "$request.header.Authorization"
                jwtConfiguration:
                  audience:
                  - !Ref 'UserPoolClient'
                  issuer: !GetAtt 'UserPool.ProviderURL'
                type: jwt
        paths:
          # /foodstore/foods/{foodId}:
          #   get:
          #     responses:
          #       default:
          #         description: "Default response for GET /foodstore/foods/{foodId}"
          #     x-amazon-apigateway-integration:
          #       payloadFormatVersion: "1.0"
          #       connectionId: !Ref HttpApiVPCLink
          #       type: "http_proxy"
          #       httpMethod: "ANY"
          #       uri: !GetAtt ServiceDiscoveryServiceFoodstoreFoods.Arn
          #       connectionType: "VPC_LINK"
          #   put:
          #     responses:
          #       default:
          #         description: "Default response for PUT /foodstore/foods/{foodId}"
          #     security:
          #     - my-authorizer: []
          #     x-amazon-apigateway-integration:
          #       payloadFormatVersion: "1.0"
          #       connectionId: !Ref HttpApiVPCLink
          #       type: "http_proxy"
          #       httpMethod: "ANY"
          #       uri: !GetAtt ServiceDiscoveryServiceFoodstoreFoods.Arn
          #       connectionType: "VPC_LINK"
          /tweets/timeline:
            get:
              responses:
                default:
                  description: "Default response for GET /tweets/timeline"
              # security:
              # - my-authorizer: []
              x-amazon-apigateway-integration:
                payloadFormatVersion: "1.0"
                connectionId: !Ref HttpApiVPCLink
                type: "http_proxy"
                httpMethod: "ANY"
                uri: !GetAtt ServiceDiscoveryServiceTweetStore.Arn
                connectionType: "VPC_LINK"
          /tweets/profile:
            get:
              responses:
                default:
                  description: "Default response for GET /tweets/profile"
              security:
              - my-authorizer: []
              x-amazon-apigateway-integration:
                payloadFormatVersion: "1.0"
                connectionId: !Ref HttpApiVPCLink
                type: "http_proxy"
                httpMethod: "ANY"
                uri: !GetAtt ServiceDiscoveryServiceTweetStore.Arn
                connectionType: "VPC_LINK"
          /tweets:
            post:
              responses:
                default:
                  description: "Default response for POST /tweets"
              security:
              - my-authorizer: []
              x-amazon-apigateway-integration:
                payloadFormatVersion: "1.0"
                connectionId: !Ref HttpApiVPCLink
                type: "http_proxy"
                httpMethod: "ANY"
                uri: !GetAtt ServiceDiscoveryServiceTweetStore.Arn
                connectionType: "VPC_LINK"
            delete:
              responses:
                default:
                  description: "Default response for DELETE /tweets - this is a utility method, please ignore, just added for my own convenience so I don't need to create a bastion to run sql scripts to truncate the tweets table"
              # security:
              # - my-authorizer: []
              x-amazon-apigateway-integration:
                payloadFormatVersion: "1.0"
                connectionId: !Ref HttpApiVPCLink
                type: "http_proxy"
                httpMethod: "ANY"
                uri: !GetAtt ServiceDiscoveryServiceTweetStore.Arn
                connectionType: "VPC_LINK"
        x-amazon-apigateway-cors:
          # This is a Test client web app that invokes the API, used in the blog post, for demostration purposes only.
          # In production, make sure that you do NOT allow any untrusted origin.
          allowOrigins:
            - 'https://master.d34am23lsz3nvz.amplifyapp.com'
          allowHeaders:
            - '*'
          allowMethods:
            - 'POST'
            - 'GET'
            - 'DELETE'
        x-amazon-apigateway-importexport-version: "1.0"

  HttpApiStage:
    Type: 'AWS::ApiGatewayV2::Stage'
    Properties:
      StageName: '$default'
      ApiId: !Ref 'HttpApi'
      AutoDeploy: true

Outputs:
  APITestPage:
    Description: The URL of the sample web app client, used to test the sample API
    Value: !Join
      - ''
      - - "https://master.d34am23lsz3nvz.amplifyapp.com/?stackregion="
        - !Ref 'AWS::Region'
        - "&stackhttpapi="
        - !Ref 'HttpApi'
        - "&stackuserpool="
        - !Ref 'UserPool'
        - "&stackuserpoolclient="
        - !Ref 'UserPoolClient'
  APIInvokeURL:
    Description: Invoke URL for the HTTP API
    Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
  APIInvokeURLTweetStore:
    Description: Invoke URL for the HTTP API for the service Petstore Pets
    Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com/tweets/timeline'
  APIId:
    Description: The ID of the HTTP API
    Value: !Ref 'HttpApi'
  ECSClusterName:
    Description: The name of the ECS cluster
    Value: !Ref 'ECSCluster'
  VpcId:
    Description: The ID of the VPC that this stack is deployed in
    Value: !Ref 'VPC'
  ContainerSecurityGroup:
    Description: A security group used to allow Fargate containers to receive traffic
    Value: !Ref 'ContainerSecurityGroup'
  PrivateDNSNamespace:
    Description: The ID of the private DNS namespace.
    Value: !Ref 'PrivateDNSNamespace' 
  DBName:
    Description: The name of the database that is created within the PostgreSQL instance.
    Value: !Ref DBName
  Secret:
    Description: Reference to the secret containing the password to the database.
    Value: !Ref 'Secret'
